tests/negative/ns_import_collision.osc
use "../positive/ns_helper.osc" as helper

fn! main() {
    let x: i32 = add(3, 4);
    print_i32(x);
}
